# RankMe

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  how_to_start.ipynb  pyproject.toml  verify_installation.py
.github/workflows/: ci.yml  code-quality.yml  nightly.yml
docs/: api.md  ci_cd_fixes.md  ci_cd_setup.md  conf.py  index.rst  installation.md  quickstart.md
examples/: basic_usage.py  segmentation_usage.py
rankme/: __init__.py  base.py  classification.py  feature_learning.py  network.py  regression.py  segmentation.py  suite.py
tests/: conftest.py  test_base.py  test_benchmarks.py  test_classification.py  test_feature_learning.py  test_package.py  test_regression.py  test_segmentation.py
