[project]
name = "rankme"
version = "0.1.0"
description = "A comprehensive PyTorch-based metrics library for ML tasks including feature learning, classification, and regression"
authors = [
    {name = "Roberto Del Prete", email = "roberto.delprete@example.com"},
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "typing-extensions>=4.0.0",
    "pytest>=8.4.2",
    "pip>=25.3",
    "thop>=0.1.1.post2209072238",
    "torchvision>=0.22.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["machine learning", "metrics", "pytorch", "rankme", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/rankme"
Repository = "https://github.com/yourusername/rankme"
Documentation = "https://rankme.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/rankme/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.8.6",
    "pip-audit>=2.6.1",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_single_line = false
known_first_party = ["rankme"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
    "slow: marks tests as slow running"
]
addopts = [
    "-v",
    "--tb=short",
    "--cov=rankme",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["rankme"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B110", "B601"]  # Skip assert_used and try_except_pass

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]
